src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Comp Team</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Pending Sales Comp</fullName>
        </values>
        <values>
            <fullName>Pending Sales Rep</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting for Approval</fullName>
        </values>
        <values>
            <fullName>Waiting for Reply</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for Reply</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Reason_Detail__c</fullName>
        <label>Case Reason Detail</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Discounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update MAC Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provision Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Agent Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Splits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 to 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 to 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 to 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 to 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 to 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Permanent License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Current MAC Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Reasons__c</fullName>
        <label>Case Reasons</label>
        <picklist>
            <controllingField>Inquiry_Type__c</controllingField>
            <picklistValues>
                <fullName>Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clawback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log in issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subordinate(s) adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Views and Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not receive comp plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comp plan information incorrect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Close_Month__c</fullName>
        <label>Commission Close Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Close_Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <label>Commission Close Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Geo__c</fullName>
        <formula>IF( ISPICKVAL(CreatedBy.Geo__c , &apos;North America&apos;), &apos;North America&apos;, 
IF( ISPICKVAL(CreatedBy.Geo__c, &apos;EMEA&apos;), &apos;EMEA&apos;,
IF( ISPICKVAL(CreatedBy.Geo__c, &apos;ROW&apos;), &apos;ROW&apos;, 
IF( ISPICKVAL(CreatedBy.Geo__c, &apos;BD&apos;), &apos;BD&apos;, 
IF( ISPICKVAL(CreatedBy.Geo__c, &apos;Worldwide&apos;), &apos;Worldwide&apos;,&apos;None&apos;)))))</formula>
        <label>Created by Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Address__c</fullName>
        <inlineHelpText>Enter the current MAC address:
  - MAC address that needs to become permanent
  - MAC address that needs to be updated</inlineHelpText>
        <label>Current MAC Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commission Calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Order Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Callidus System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lastest_Case_Comment__c</fullName>
        <description>Hidden on page layout. Populated by WFR to contain the most recent Case Comment.</description>
        <label>Lastest Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>LicenseDetail__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases (Order Ops)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <formula>CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_s_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_s_Manager__c</fullName>
        <formula>CreatedBy.Manager.FirstName + &quot; &quot; +  CreatedBy.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology</label>
        <referenceTo>Technology__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Misalignment_Reason__c</fullName>
        <label>Territory Misalignment Reason</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Technical Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated_MAC_Address__c</fullName>
        <inlineHelpText>Enter MAC Address that needs to replace the Current MAC Address</inlineHelpText>
        <label>Updated MAC Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Initially_Assigned_At__c</fullName>
        <label>Initially Assigned At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Resolution_Time__c</fullName>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zendesk__Solved_At__c</fullName>
        <label>Solved At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Ticket_ID__c</fullName>
        <label>Zendesk Ticket ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>BIS Case Queue,Dominic Gomes,Darryl Molina,Jake Lewis,Brian Hoyt</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Waiting for Reply</value>
        </filters>
        <label>All Open Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIS_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cases_not_Closed</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.EMAIL</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,On Hold</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Internal</value>
        </filters>
        <filters>
            <field>CASES.REASON</field>
            <operation>notEqual</operation>
            <value>Transfer of Ownership</value>
        </filters>
        <label>All Cases not Closed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_New_W10</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>Created_by_Geo__c</columns>
        <columns>CASES.PRIORITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.OrderOps</value>
        </filters>
        <filters>
            <field>CASES.REASON</field>
            <operation>equals</operation>
            <value>W-10 Status</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>OrderOps W10&apos;s</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>OrderOps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BIS_Case_Queue</fullName>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed,Enhancement</value>
        </filters>
        <label>BIS Case Queue</label>
        <queue>BIS_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BIS_Cases_CLOSED</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.REASON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Internal</value>
        </filters>
        <label>BIS Cases - CLOSED</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIS_Team</group>
            <group>OrderOps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BIS_Cases_Feature_Request</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Feature Request</value>
        </filters>
        <label>BIS Cases - Feature Request</label>
        <sharedTo>
            <group>BIS_Team</group>
            <group>OrderOps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Niel_s_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.EMAIL</field>
            <operation>equals</operation>
            <value>niel.hildebrand@appdynamics.com</value>
        </filters>
        <label>Niel&apos;s Cases</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIS_Team</group>
            <role>Marketing_Leader</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OrderOps_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.REASON</columns>
        <columns>Case_Reason_Detail__c</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>Created_by_Geo__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.OrderOps</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>OrderOps Open Cases</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>OrderOps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Order_Ops</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.REASON</columns>
        <columns>Case_Reason_Detail__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Created_by_Geo__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.OrderOps</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>has just been set to W-10</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>OrderOps New Cases</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>OrderOps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Comp_Queue_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Submitter__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Sales Comp Queue - Closed Cases</label>
        <language>en_US</language>
        <queue>Sales_Comp_Team</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Sales_Operations_Analyst</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Sales_Operations_Senior_Leader</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Comp_Queue_Open_Cases</fullName>
        <columns>Commission_Close_Month__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Submitter__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Sales Comp Queue - Open Cases</label>
        <language>en_US</language>
        <queue>Sales_Comp_Team</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>Sales_Operations_Analyst</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Sales_Operations_Senior_Leader</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_s_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notEqual</operation>
            <value>Order Ops</value>
        </filters>
        <label>Today&apos;s Cases</label>
    </listViews>
    <listViews>
        <fullName>Yesterday_s_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>notEqual</operation>
            <value>Order Ops</value>
        </filters>
        <label>Yesterday&apos;s Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Comp_Team_Cases</fullName>
        <active>true</active>
        <businessProcess>Comp Team</businessProcess>
        <label>Comp Team Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>OrderOps</fullName>
        <active>true</active>
        <businessProcess>Master</businessProcess>
        <label>OrderOps</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Create_Permanent_License_Current_MAC</fullName>
        <active>true</active>
        <description>Requires Users to update the Current MAC Address field if the &quot;Create Permanent License&quot; value is selected within the Case Reason Detail field.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Case_Reason_Detail__c, &quot;Create Permanent License&quot;),
ISBLANK(Current_MAC_Address__c))</errorConditionFormula>
        <errorDisplayField>Current_MAC_Address__c</errorDisplayField>
        <errorMessage>Update the Current MAC Address field with the permanent MAC Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Update_Current_MAC_Address</fullName>
        <active>true</active>
        <description>Requires Users to update the Current MAC Address field if the &quot;Create Permanent License&quot; value is selected within the Case Reason Detail field.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Case_Reason_Detail__c, &quot;Update Current MAC Address&quot;),
OR(
ISBLANK(Current_MAC_Address__c),
ISBLANK(Updated_MAC_Address__c)))</errorConditionFormula>
        <errorDisplayField>Updated_MAC_Address__c</errorDisplayField>
        <errorMessage>Update the both the  Current MAC Address Updated MAC Address fields.</errorMessage>
    </validationRules>
</CustomObject>